--- a/groepindeling.html
+++ b/groepindeling.html
@@ -6,36 +6,44 @@
 
 <p id="text_out">hoi</p>
 <script src="./js/groupSelection.js"></script>
+<!script src="./js/groupSelection_new.js"></script>
 <script>
 
 let displayText = ""
-nPlaces = 80;
+// nPlaces = 80;
 // groupSizes =[1,2,3,4,5,7,12]
 // nGroups = [60,21,4,3,2,1,1]
-groupSizes =[1,2,3,4,5,7,12,20,50]
-nGroups = [50,15,6,3,2,1,1,2,1]
+// groupSizes =[1,2,3,4,5,7,12,20,50]
+// nGroups = [50,15,6,3,2,1,1,2,1]
+nPlaces = 6;
+groupSizes =[1,2,3]
+nGroups = [3,2,1]
 nIterations =150
 //nIndividuals = 40;
 n40 = 1;
 n50 = 1;
 
 // create possible combinations
-var v = [];
-v.push([nPlaces,0,0]); // only individuals
-v.push([nPlaces - 40,1,0]); //  individuals + 1 group of 40
-v.push([nPlaces - 50,0,1]); //  individuals + 1 group of 50
-
 optimizer = new groups(nPlaces,groupSizes,nGroups)
 
 optimizer.setCombinations()
 console.log("combinations")
-// let comb = optimizer.showCombinations("\r\n")
-// console.log(comb["combinations"])
-// console.log(comb["calculations"])
-
-p = optimizer.setProbabilities(nIterations)
 
 displayText += "chance should be "+nPlaces+" / "+optimizer.nCandidates+" = "+optimizer.pAim +"<br>";
+
+for (let i=0; i<10 && i<optimizer.combinations.length; i++)
+{
+	displayText += htmlFromArray(optimizer.combinations[i]) + "<br>"
+	displayText += optimizer.calculationString(i) + "<br>"
+}
+document.getElementById("text_out").innerHTML = displayText;
+let comb = optimizer.showCombinations("\r\n")
+console.log(comb["combinations"])
+console.log(comb["calculations"])
+
+optimizer.initialProbabilities(nIterations)
+p = optimizer.improveProbabilities(nIterations)
+
 displayText += "iteration = "+nIterations +"<br>";
 // displayText += "p = "+p +"<br>";
 displayText += "number of combinations : "+ p.length+"<br> "
