--- a/groepindeling.html
+++ b/groepindeling.html
@@ -4,7 +4,12 @@
 
 <h2>JavaScript Arrays</h2>
 
-<p id="text_out">hoi</p>
+<p id="text_out">processing... hit [F12] to view console.</p>
+ <script type="text/javascript" async
+  src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.2/MathJax.js?config=TeX-MML-AM_CHTML">
+</script>
+
+<script src="./js/Math_display.js"></script>
 <script src="./js/groupSelection.js"></script>
 <!script src="./js/groupSelection_new.js"></script>
 <script>
@@ -30,13 +35,19 @@ optimizer.setCombinations()
 optimizer.selectAllCombinations()
 console.log("combinations")
 
-displayText += "chance should be "+nPlaces+" / "+optimizer.nCandidates+" = "+optimizer.pAim +"<br>";
+displayText += "chance should be "+nPlaces+" / "+optimizer.nCandidates+" = "+optimizer.pAim +"<br>"
+displayText += " \n $$ ";
 
 for (let i=0; i<10 && i<optimizer.selection.length; i++)
 {
-	displayText += htmlFromArray(optimizer.combinations[i]) + "<br>"
-	displayText += optimizer.calculationString(i) + "<br>"
+	
+	displayText +=  vector_to_TeX(optimizer.combinations[i])
+	// displayText += htmlFromArray(optimizer.combinations[i]) + "<br>"
+	// displayText += optimizer.calculationString(i) + "<br>"
+	displayText += optimizer.calculationTeX(i) 
 }
+displayText += " $$ ";
+
 document.getElementById("text_out").innerHTML = displayText;
 let comb = optimizer.showCombinations(optimizer.selection,"\r\n")
 console.log(comb["combinations"])
