--- a/groepindeling.html
+++ b/groepindeling.html
@@ -32,7 +32,8 @@ nGroups = [60,21,4,3,2,1,1]
 groupSizes =[1,2,3]
 nGroups = [3,2,1]
 */
-nIterations =150
+nIterations =350
+nSelected = 4 // number of selected combinations
 //nIndividuals = 40;
 n40 = 1;
 n50 = 1;
@@ -65,6 +66,7 @@ if (0 == optimizer.combinations.length)
 }
 else
 {
+optimizer.setProbabilities()
 optimizer.selectAllCombinations()
 
 displayText += "number of valid combinations : "+ optimizer.selection.length+"<br> "
@@ -73,7 +75,6 @@ displayText += "Some valid combinations are: <br> \n $$ ";
 
 for (let i=0; i<25 && i<randomArr.length; i++)
 {
-	
 	displayText +=  vector_to_TeX(optimizer.combinations[randomArr[i]])
 }
 displayText += " $$ <br>";
@@ -85,6 +86,22 @@ for (let i=0; i<10 && i<randomArr.length; i++)
 	displayText += optimizer.calculationTeX(randomArr[i]) 
 }
 displayText += " $$ <br>";
+
+optimizer.selectFirstCombination()
+optimizer.selectBestCombinations()
+// optimizer.selection = randomArr.slice(0,500)
+optimizer.selection = optimizer.selection.slice(0,nSelected)
+displayText += " the selected combinations are <br> \n $$";
+var i = 0;
+for (i=0; i<25 && i<optimizer.selection.length; i++)
+{
+	displayText +=  optimizer.selectedToTex(i)
+}
+if (i<optimizer.selection.length  )
+{	displayText +=  " .... "
+}
+
+displayText += " $$ <br>";
 displayText += "Now setting probabilities to combinations... <br>";
 displayText += "Everyone should have a chance of "+nPlaces+" / "+optimizer.nCandidates+" = "+optimizer.pAim +"<br>"
 
@@ -94,8 +111,8 @@ let comb = optimizer.selectionString(optimizer.selection,"\r\n")
 console.log(comb["combinations"])
 console.log(comb["calculations"])
 
-optimizer.initialProbabilities()
-p = optimizer.improveProbabilities(nIterations, 1.001, htmlId = "progress_message")
+optimizer.initialWeights()
+p = optimizer.improveWeights(nIterations, 1.001, htmlId = "progress_message")
 
 displayText += "<br>results after "+nIterations +" iterations:";
 displayText += "<br>  "+optimizer.chancesTable(p,3,null)
