--- a/groepindeling.html
+++ b/groepindeling.html
@@ -8,6 +8,7 @@
 
 <button id="csvDownload" onclick="download('groups.csv', optimizer.resultCsv())">Export results to csv file</button>
 <p id="text_out">processing... hit [F12] to view console.</p>
+<button id="csvDownload" onclick="download('groups.csv', optimizer.resultCsv())">Export results to csv file</button>
 <p id="progress_message"></p>
 
  <script type="text/javascript" async
@@ -22,22 +23,28 @@
 document.getElementById("csvDownload").style.display='none';
 
 let displayText = ""
-nPlaces = 80;
-groupSizes =[1,2,3,4,5,7,12]
-nGroups = [60,21,4,3,2,1,1]
-
-// groupSizes =[1,2,3,4,5,7,12,20,50]
-// nGroups = [50,15,6,3,2,1,1,2,1]
-
-/*nPlaces = 6;
+/* nPlaces = 6;
 groupSizes =[1,2,3]
 nGroups = [3,2,1]
 */
-nIterations =350
-nSelected = 4 // number of selected combinations
+
+nPlaces = 80;
+groupSizes =[1,2,3,4,5,7,12,20,50]
+nGroups = [50,15,6,3,2,1,1,2,1]
+
+groupSizes =[1,2,3,4,5,7,12]
+nGroups = [60,21,4,3,2,1,1]
+// nGroups = [30,21,4,3,2,1,1]
+
+/* no solution is possible 
+groupSizes =[1,40,50]
+nGroups = [60,1,1]
+*/
+
+
+// nIterations =350
+// nSelected = 4 // number of selected combinations
 //nIndividuals = 40;
-n40 = 1;
-n50 = 1;
 
 // create possible combinations
 optimizer = new groups(nPlaces,groupSizes,nGroups)
@@ -75,22 +82,6 @@ optimizer.setProbabilities()
 optimizer.selectAllCombinations()
 
 displayText += "number of valid combinations : "+ optimizer.selection.length+"<br> "
-randomArr = shuffle(Array.from(Array(optimizer.selection.length).keys()))
-displayText += "Some valid combinations are: <br> \n $$ ";
-
-for (let i=0; i<25 && i<randomArr.length; i++)
-{
-	displayText +=  vector_to_TeX(optimizer.combinations[randomArr[i]])
-}
-displayText += " $$ <br>";
-displayText += "(check some totals) <br> \n $$ ";
-
-for (let i=0; i<10 && i<randomArr.length; i++)
-{
-	
-	displayText += optimizer.calculationTeX(randomArr[i]) 
-}
-displayText += " $$ <br>";
 document.getElementById("text_out").innerHTML = displayText;
 
 optimizer.selectFirstCombination()
@@ -100,19 +91,22 @@ document.getElementById("progress_message").innerHTML = progressText;
 // optimizer.selectBestCombinationsOld()
 // optimizer.selectNSimilarCombinations()
 
-optimizer.selectBestCombinations()
+if (! optimizer.selectBestCombinations())
+{	displayText += " --- I could not find a good solution ! --- "
+}
 // optimizer.selection = optimizer.selection.slice(0,nSelected)
 displayText += " the selected combinations are <br> \n $$";
 var i = 0;
 for (i=0; i<25 && i<optimizer.selection.length; i++)
 {
 	displayText +=  optimizer.selectedToTex(i)
+	displayText +=  optimizer.calculationTeX(i,false)
 }
 if (i<optimizer.selection.length  )
 {	displayText +=  " .... "
 }
-
 displayText += " $$ <br>";
+
 displayText += "Now setting probabilities to combinations... <br>";
 displayText += "Everyone should have a chance of "+nPlaces+" / "+optimizer.nCandidates+" = "+optimizer.pAim +"<br>"
 
@@ -127,16 +121,11 @@ console.log(comb["calculations"])
 
 displayText += "<br>results after "+nIterations +" iterations:";
 */
-displayText += "<br>  "+optimizer.chancesTable(optimizer.p,3,null)
+displayText += "<br>  "+optimizer.resultsTable(5)
+displayText += "<br>  "+optimizer.chancesTable(3)
 // displayText += "p = "+p +"<br>";
-displayText += "individual chances :<br> "
-var pRelative = optimizer.pIndividuals(optimizer.p,true)
-for (let i =0; i<pRelative.length; i++)
-{
-	displayText += i+": "+nGroups[i]+" groups of size "+groupSizes[i]+" deviate from the average by "+pRelative[i].toFixed(8)+"<br>"
-}
 
-displayText +="<br>ready<br>";
+document.getElementById("progress_message").innerHTML ="ready.";
 
 document.getElementById("text_out").innerHTML = displayText;
 document.getElementById("csvDownload").style.display='block';
