renamed the main file to index.html

--- a/dont_start_new.html
+++ b/dont_start_new.html
@@ -24,8 +24,8 @@
 <br> 4/5 x 1/4 = 1/5 .
 </ul>
 <br> So the team has a chance of 2/5 to be selected.
-1 of the soloists will be added, so this increases their chances by 1/4 x 2/5 = 1/10. 
-<br>So far, the soloists have a chance of 1/5 + 1/10 = 30%.
+1 of the soloists will be added, so this increases their individual chances by 1/4 x 2/5 = 1/10. 
+<br>So far, each soloist has a chance of 1/5 + 1/10 = 30%.
 The team has a chance of 2/5 = 40%
 <br>In the remaing cases, the draw is invalid. </p>
 </div>
